#437266 - As an app developer I want to be able to add new <Vaccine>
Code in backend, and yaml documentation for the specified card/user story.
